# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.c
image/: bitmap.c  bitmap.h  denoising.c  denoising.h
loading/: hash_map.c  hash_map.h  loading.h
materials/: dielectric.c  dielectric.h  diffuse.c  emissive.c  emissive.h  mat_list.h  metal.c
objects/: buffers.h  mesh.c  object.h  plane.h  sphere.c
renderer/: renderer_aux.c  renderer_compute.c  renderer_misc.c
src/: main.c  settings.h  utility.c  utility.h
src/image/: bitmap.c
src/materials/: diffuse.h  mat_list.c  material.h  metal.h
src/objects/: mesh.h  plane.c  sphere.h
src/renderer/: renderer.h  renderer_trace.c
src/structs/: camera.h  hit_record.c  hit_record.h  ray.h  vector.c  vector.h
structs/: ray.c  vector.h
tests/: test.c  test.h
